# BERT4Rec

./: .gitignore  pyproject.toml
src/: bert4rec.py  config.py  dataset.py  download_and_preprocess.py  train.py  train_utils.py  trainer.py
src/bert4rec/: dataset.py
